# RiverscapesXML

./: .gitignore  BaseMaps.xml  BaseMaps.xsd  CNAME  Program.xsd  Python-RiverscapesXML.code-workspace  README.md  RSXML-RiverscapesXML.code-workspace  RiverscapesXML.code-workspace  bfIslands.qml  convert_qml_to_json.py  index.json  riverscapes_metadata.code-workspace  web_raster_symbologies.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.docker.txt
BratOregon/: program.xml
CHaMP/: program.xml
python/: .flake8  .gitignore  README.md  createenv.sh  gh_pages_publish.py  migrate_yankee_fork_sites.py  pyproject.toml  requirements.dev.txt  requirements.txt  test.py  topo_fix_tin_case.py  validate.py
python/NEXT/: check.py  s3_migrate.py  xml_migrate.py
python/jupyter/veg_rasters/: evt_bps.ipynb  evt_class_lookup.json  us_200bps.tif.aux.xml  us_200evt.tif.aux.xml
python/jupyter/veg_rasters/output/: BPS_Riparian.clr  EVT_Riparian.clr  LUI.clr  Veg_Suitability.clr  bps_names.clr  evt_classes.clr  evt_names.clr
python/migration/: README.md  augment_db.py  migration_summary.py  util.py  warehouse_migration.py  xml_conversion.py  xml_file_checker.py  xml_file_checker_adapted.py
python/scripts/: createEnv.sh
riverscapes_metadata/: CHANGELOG.md  README.md  pyproject.toml
riverscapes_metadata/non-core_helpers/: migrate_authority_name.py  migrate_layer_defs_071_080.py
riverscapes_metadata/python/: csv_to_layer_definitions.py  export_layer_definitions_for_s3.py  pyproject.toml
riverscapes_metadata/riverscapes_metadata/: __init__.py  csv_to_layer_definitions.py  export_layer_definitions_for_s3.py  publish_metadata.py
riverscapes_metadata/riverscapes_metadata/non-core_helpers/: csv_to_layer_definitions.py  example_descriptions.csv  export_descriptions_to_csv.py  migrate_layer_defs_071_080.py  update_json_descriptions.py
riverscapes_metadata/schema/: CHANGELOG.md  layer_definitions.schema.json
riverscapes_metadata/test/: layer_definitions.json  layer_definitions_sample_from_csv.json  sample_layer_definitions_export.csv  test_run_csv_to_layer_definitions.sh  test_run_export_layer_definitions_for_s3.sh
riverscapes_metadata/test/example_tool_folder/: layer_definitions.json  layer_descriptions.json
(+2982 files in other folders)
