[project]
name = "python"
version = "0.1.0"
description = "Utility scripts and automation for Riverscapes XML workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "inquirer==2.10.0",
  "jsonschema==4.15.0",
  "lxml==6.0.2",
  "requests==2.32.4",
  "termcolor==2.3.0",
  "toml==0.10.2",
  "urllib3==2.6.3",
]

[dependency-groups]
dev = [
  "autopep8==1.7.0",
  "flake8==7.1.1",
  "mccabe==0.7.0",
  "pycodestyle==2.12.0",
  "pylint==2.15.0",
  "pytest==8.3.4",
]
