[project]
name = "riverscapes-metadata"
version = "0.1.0"
description = "tools for managing layer definitions in riverscapes-tools and other repos that generate data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.25.1",
    "pyarrow>=22.0.0",
    "urllib3>=2.5.0",
]

[project.scripts]
export-layer-definitions-for-s3 = "riverscapes_metadata.export_layer_definitions_for_s3:main"